--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"homepage": "https://github.com/marbleville/RideFuelPro#readme",
 	"dependencies": {
 		"dotenv": "^16.4.5",
+		"lowpassf": "^0.5.0",
 		"node-fetch": "^2.7.0",
 		"nodeplotlib": "^1.1.2",
 		"sharp": "^0.33.3",
